syntax = "proto3";
package audio_engine;

service AudioEngine {
  rpc Join(JoinRequest) returns (OkResponse);
  rpc Leave(LeaveRequest) returns (OkResponse);

  rpc Play(PlayRequest) returns (PlayResponse);
  rpc SetVolume(SetVolumeRequest) returns (OkResponse);
  rpc Stop(StopRequest) returns (OkResponse);
  rpc StopMany(StopManyRequest) returns (OkResponse);
  rpc NextMusic(NextMusicRequest) returns (OkResponse);
  rpc GetSessionState(GetSessionStateRequest) returns (SessionStateResponse);
}

message Track {
  uint64 track_id = 1;
  string queue_name = 2;
  string description = 3;
  string audio_request_string = 4;
  string cache_key = 5;
  string tap_name = 6;
  float volume = 7;
}

message Queue {
  string name = 1;
  repeated Track tracks = 2;
}

message GetSessionStateRequest { uint64 guild_id = 1; }

message SessionState {
  uint64 guild_id = 1;
  uint64 channel_id = 2;
  repeated Queue queues = 3;
}

message SessionStateResponse {
  oneof result {
    SessionState state = 1;
    Error error = 2;
  }
}

message JoinRequest {
  uint64 guild_id = 1;
  uint64 channel_id = 2;
}

message LeaveRequest { uint64 guild_id = 1; }

message AudioStopFilter {
  message All {}
  message Music {}
  message TTS { uint64 user_id = 1; }

  oneof filter_type {
    All all = 1;
    Music music = 2;
    TTS tts = 3;
  }
}

message Error {
  string message = 1;
  bool is_internal = 2;
}

message OkResponse {
  oneof result {
    bool success = 1;
    Error error = 2;
  }
}

message PlayRequest {
  uint64 guild_id = 1;
  string queue_name = 2;
  string tap_name = 3;
  string audio_request_string = 4;
  float volume = 5;
}

message PlayResponse {
  oneof result {
    uint64 track_id = 1;
    Error error = 2;
  }
}

message SetVolumeRequest {
  uint64 guild_id = 1;
  uint64 track_id = 2;
  float volume = 3;
}

message StopRequest {
  uint64 guild_id = 1;
  string track_id = 2;
}

message NextMusicRequest { uint64 guild_id = 1; }

message StopManyRequest {
  uint64 guild_id = 1;
  AudioStopFilter filter = 2;
}
